@@ -1,14 +1,14 @@
 ---
 fixtures:
   repositories:
-    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup
-    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib
-    simp_options: https://github.com/simp/pupmod-simp-simp_options
+    compliance_markup: https://github.com/simp/pupmod-simp-compliance_markup.git
+    stdlib: https://github.com/puppetlabs/puppetlabs-stdlib.git
+    simp_options: https://github.com/simp/pupmod-simp-simp_options.git
     simplib: https://github.com/simp/pupmod-simp-simplib.git
-    systemd: https://github.com/simp/puppet-systemd
+    systemd: https://github.com/simp/puppet-systemd.git
     disa_stig-el7-baseline:
-      repo: https://github.com/simp/inspec-profile-disa_stig-el7
-      branch:  master
+      repo: https://github.com/simp/inspec-profile-disa_stig-el7.git
+      branch: master
       target: spec/fixtures/inspec_deps/inspec_profiles/profiles
   symlinks:
     useradd: "#{source_dir}"
