@@ -1,39 +1,0 @@
-# This file managed by Puppet.
-
-CHFN_AUTH no
-CHFN_RESTRICT frwh
-CHSH_AUTH no
-CREATE_HOME yes
-DEFAULT_HOME no
-ENCRYPT_METHOD SHA512
-FAIL_DELAY 4
-FAILLOG_ENAB yes
-GID_MAX 500000
-GID_MIN 1000
-ISSUE_FILE /etc/issue
-LASTLOG_ENAB yes
-LOG_OK_LOGINS yes
-LOG_UNKFAIL_ENAB yes
-LOGIN_RETRIES 3
-LOGIN_TIMEOUT 60
-MAIL_CHECK_ENAB yes
-MAIL_DIR /var/spool/mail
-OBSCURE_CHECKS_ENAB yes
-PASS_ALWAYS_WARN yes
-PASS_CHANGE_TRIES 3
-PASS_MAX_DAYS 180
-PASS_MIN_DAYS 1
-PASS_WARN_AGE 14
-PASS_MIN_LEN 15
-PORTTIME_CHECKS_ENAB yes
-QUOTAS_ENAB yes
-SHA_CRYPT_MIN_ROUNDS 5000
-SHA_CRYPT_MAX_ROUNDS 10000
-SU_NAME su
-SU_WHEEL_ONLY no
-SYSLOG_SG_ENAB yes
-SYSLOG_SU_ENAB yes
-UID_MAX 1000000
-UID_MIN 1000
-UMASK 007
-USERGROUPS_ENAB yes
